--- a/project_info.json
+++ b/project_info.json
@@ -1,1 +1,1 @@
-{"gitStatus":"CLONE_COMPLETED","testStatus":0,"submitStatus":0,"currentTestResult":null,"workingDirectory":"C:\\Users\\Ambica\\MissionRnDProjects\\untitled6"}
+{"gitStatus":"REPO_CREATED","testStatus":0,"submitStatus":0,"currentTestResult":null,"workingDirectory":"C:\\Users\\Ambica\\MissionRnDProjects\\untitled6"}
